tests/ui/feature-gates/feature-gate-macro-guard-matcher.stderr
error[E0658]: `guard` fragments in macro are unstable
  --> $DIR/feature-gate-macro-guard-matcher.rs:3:10
   |
LL |         ($x:guard) => {};
   |          ^^^^^^^^
   |
   = note: see issue #153104 <https://github.com/rust-lang/rust/issues/153104> for more information
   = help: add `#![feature(macro_guard_matcher)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
